base.html에 container 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,10 @@
     <title>10YearDiary</title>
   </head>
   <body>
-    {% block body %}
-    {% endblock %}
+    <div class="container">
+      {% block body %}
+      {% endblock %}
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
