--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,13 @@
             <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
           </li>
         {% endif %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:create' %}">SignUp</a>
+        </li>
       </ul>
     </div>
   </nav>
+
   <div class="container">
     {% block body %}
     {% endblock %}
