--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,9 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">{{ user.username }}</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:update' %}">정보 수정</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
           </li>
         {% else %}
